--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.8.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "styled-components": "^6.0.0-rc.5",
     "swr": "^2.2.0"
   }
