--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
     "styled-components": "^6.0.0-rc.5",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "use-local-storage-state": "^18.3.3"
   }
 }
