--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "leaflet-geosearch": "^3.8.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "next": "13.4.7",
+    "next": "^13.5.6",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
